refactor: Update project name and metadata
Renames the project in `package.json` to a more concise "origo" and updates the `name` field in `metadata.json` accordingly. This simplifies identification and consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "origo---the-ultimate-sun-tracking-&-origami-collection-app",
+  "name": "origo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
